# HHRU_PARSER

./: .gitignore  README.md  pyproject.toml
hhru_parser/: __init__.py  main.py
hhru_parser/src/methods/: bd.py  hh_pars.py  hhtp.py  stats.py
