[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hhru-parser"
version = "0.1.0"
description = "Parser for hh.ru"
authors = [
    {name = "Viktoriya", email = "ibraimova2711@gmail.com"}
]
dependencies = [
    "tqdm>=4.66.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "matplotlib>=3.7.0"
]

[project.scripts]
hhru-parser = "hhru_parser.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hhru_parser*"]  # автоматически найдет все подпакеты